--- a/my_content.tex
+++ b/my_content.tex
@@ -116,6 +116,7 @@ Compared to previous methods, our RL-based approach showed a marked improvement.
 It outperformed traditional methods by Z\%, demonstrating the effectiveness of RL in this application.
 
 \section{Discussion}
+The results confirmed the effectiveness of reinforcement learning for mimicking the dose using DVH distance to derive the reward.
 We aim to extend this work to real cases, with more constraints and complex decisions.
 
 \section*{Appendix}
