--- a/abstract.tex
+++ b/abstract.tex
@@ -1,13 +1,29 @@
-Achieving optimal dose distribution in radiation therapy planning is a complex task, with contradicting goals.
-Yet, this step is crucial with profound implications for patient treatment.
+% Achieving optimal dose distribution in radiation therapy planning is a complex task, with contradicting goals. Yet, this step is crucial with profound implications for patient treatment. % delete?
 
-The absence of universally agreed-upon constraints prioritization in radiation therapy planning complicates the definition of an optimal plan, requiring a delicate balance between multiple objectives.
-This balance usually ends up being done manually.
+The absence of universally agreed-upon constraints prioritization in radiation therapy planning complicates the definition of an optimal plan, requiring a delicate balance between multiple objectives. This balance usually ends up being done manually. %merge to 1 sentence
 
 The optimization process is further hindered by complex mathematical aspects, involving non-convex multi-objective inverse problems with a vast solution space.
 Expert bias introduces variability in clinical practice, as treatment planning is shaped by the preferences and expertise of radiation oncologists and medical physicists.
 
-To surmount these challenges, we propose a first step towards a fully automated approach, using an innovative deep-learning method that allows automatic navigation toward acceptable solution.
+To surmount these challenges, we propose a first step towards a fully automated approach, using an innovative deep-learning method.
+
+As this is new/never-performed/ongoing research, we generated synthetic phantom patients and associated trustworthy/realistic clinical doses.% need to be up in the abstract
+
+This method allows automatic navigation toward acceptable solution via [blah].
+% sentece abour method here
 We successfully trained an agent evaluating actions of a human dosimetrist, in order to reach a plan similar to past cases.
-As this is very new and ongoing research, we generated synthetic phantom patients and associated trust-able clinical doses.
+% By evaluating the action taken by humans dosimetrists, we succesfully trained an agent capable of optimizing a plan similar to past cases
+
 In future work, we hope to be able to apply this technique to real cases.
+
+% 150-300 words
+
+% too much background
+% 1§
+% 6-8 sentences
+% more details on the method (2 sentences)
+% tie ccl to reason why
+% last sentence is ok
+
+% one sentence per § of bg
+
