--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -22,7 +22,7 @@
 
 %-------------------------------------------------------------------------------------------
 %%%%% add your title here %%%%%
-\title{Clinical Knowledge Based Reinforcement Learning\\for Radiotherapy Treatment Planning System}
+\title{Radiotherapy Dose Optimization via Clinical Knowledge Based Reinforcement Learning}
 
 %%%%% add authors and affiliations here %%%%%
 \author[1,2,3]{Paul Dubois}
