--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -13,7 +13,7 @@
 % \renewcommand\UrlFont{\color{blue}\rmfamily}
 
 \begin{document}
-	\title{Radiotherapy Dose Optimization with Clinical Knowledge Based Reinforcement Learning}
+	\title{Radiotherapy Dose Optimization via Clinical Knowledge Based Reinforcement Learning}
 	\titlerunning{Radiotherapy Optimization with Clinical Knowledge}
 	
 	\author{Paul Dubois\inst{1,2,3}\orcidID{0009-0003-3856-8048}
