--- a/my_content.tex
+++ b/my_content.tex
@@ -1,19 +1,22 @@
 \section{Introduction}
+% combine first two §?
 In contemporary radiation therapy, photon intensity modulated radiation therapy (IMRT) is a pivotal technique to attain precise and conformal dose distributions within target volumes \cite{xu_comparison_2017}.
 This achievement owes its realization to the advent of the multileaf collimator (MLC) \cite{galvin_characterization_1993}.
 
 Radiation therapy is now a reliable treatment for oncology \cite{valentini_survival_2009}.
 Despite this consensus, the way to deliver radiotherapy for its best result remains very dependent upon doctors.
-Moreover, there appears to be a large variability across physicians and centres, but in terms of 3D structures contouring and irradiation constraints priorities \cite{variability_2021}.
+Moreover, there appears to be a large variability across physicians and centres, but in terms of 3D structures contouring and irradiation, constrains priorities \cite{variability_2021}.
 
 To achieve the best treatment, doctors must solve a complex inverse mathematical optimization problem with multiple trade-offs \cite{oelfke_inverse_2001} \cite{webb_physical_2003}.
+%However, a lack of standardization ...
 A lack of standardized prioritization of constraints makes the optimization a real challenge.
-The standard procedure nowadays is to guide computer optimization manually: dosimetrists manually update the settings of an optimizing software (so-called Treatment Planning System) \cite{planification_website}.
+The standard procedure nowadays is to guide computer optimization manually: dosimetrists manually update the settings of an optimizing software so-called Treatment Planning System (TPS) \cite{planification_website}.
 
-There have been many tries to create a metric that quantifies the quality of a treatment plan: Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, Heterogeneity index (non-exhaustive list) \cite{lyman_normal_1992} \cite{li_input_2022}.\label{metrics}
-However, they have yet to satisfy all radio-oncologists, and the only reliable way to assess a doctor's plan is to check out the dose-volume histograms (DVHs) themselves.
+There have been many tries to create a metric that quantifies the quality of a treatment plan, such as Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, and Heterogeneity index, among others/to name a few \cite{lyman_normal_1992} \cite{li_input_2022}.\label{metrics}
+However, they have yet to satisfy all radio-oncologists, and the only reliable way to assess a doctor's plan is to assess out the dose-volume histograms (DVHs) themselves.
 
-As a result, Pareto surface exploration is doomed to failure due to the lack of impartial quantitative measurement for a particular plan \cite{huang_pareto_2021}.
+% doom to failure: informal
+As a result, Pareto surface exploration is doomed to failure/not suitable/unsuitable due to the lack of impartial quantitative measurement for a particular plan \cite{huang_pareto_2021}.
 Other meta-optimization techniques are similarly bounded for the same reason \cite{wu_optimization_2001} \cite{xing_optimization_1999}.
 An extra challenge to attend for those is the fact that not all cases have the same "difficulty."
 Hence, for an "easy" case, doctors will require an excellent dose (in terms of the metrics mentioned above), while they can be more permissive for "harder" cases.
@@ -25,6 +28,12 @@ The decisions taken by dosimetrists when optimizing treatment can be formalized 
 Moreover, dosimetrists can guide the TPS towards an acceptable plan but usually struggle to explain their decision while interacting with the TPS.
 The difficulty in explaining why certain decisions are taken suggests using deep reinforcement learning over expert-based methods.
 This setup is similar to image recognition, where one can say a picture represents a car or a boat but struggles to explain why.
+
+% § about what I am going to do
+% focus research question
+% hypothesis
+% [﻿Step 3: Occupying the Niche] With the recent most severe drought and precipitation seasons ever recorded in California [19], we sought to correlate the relationship of climate trends with snakebite incidence in California over 20 years. [Stating Research Hypothesis] The study’s primary hypothesis was that the severity of drought would correlate with increased incidence of snakebites and could be predicted by weather patterns.
+
 
 \section{Materials and Methods}
 We introduce a new paradigm in reinforcement learning (RL) based on evaluating states rather than the reward.
