--- a/abstract.tex
+++ b/abstract.tex
@@ -1,29 +1,17 @@
-% Achieving optimal dose distribution in radiation therapy planning is a complex task, with contradicting goals. Yet, this step is crucial with profound implications for patient treatment. % delete?
-
-The absence of universally agreed-upon constraints prioritization in radiation therapy planning complicates the definition of an optimal plan, requiring a delicate balance between multiple objectives. This balance usually ends up being done manually. %merge to 1 sentence
-
+% Achieving optimal dose distribution in radiation therapy planning is a complex task, with contradicting goals. Yet, this step is crucial with profound implications for patient treatment.
+% The absence of universally agreed-upon constraints prioritization in radiation therapy planning complicates the definition of an optimal plan, requiring a delicate balance between multiple objectives. This balance usually ends up being done manually.
+A radiation therapy plan finds an equilibrium between goals with no universal prioritization. The delicate balance between multiple objectives is typically done manually.
 The optimization process is further hindered by complex mathematical aspects, involving non-convex multi-objective inverse problems with a vast solution space.
-Expert bias introduces variability in clinical practice, as treatment planning is shaped by the preferences and expertise of radiation oncologists and medical physicists.
+Expert bias introduces variability in clinical practice, as the preferences of radiation oncologists and medical physicists shape treatment planning.
 
-To surmount these challenges, we propose a first step towards a fully automated approach, using an innovative deep-learning method.
-
-As this is new/never-performed/ongoing research, we generated synthetic phantom patients and associated trustworthy/realistic clinical doses.% need to be up in the abstract
-
-This method allows automatic navigation toward acceptable solution via [blah].
-% sentece abour method here
-We successfully trained an agent evaluating actions of a human dosimetrist, in order to reach a plan similar to past cases.
-% By evaluating the action taken by humans dosimetrists, we succesfully trained an agent capable of optimizing a plan similar to past cases
-
+To surmount these challenges, we propose a first step towards a fully automated approach, using an innovative deep-learning framework.
+Using a clinically meaningful distance between doses, we trained a reinforcement learning agent to mimic a set of plans.
+This method allows automatic navigation toward acceptable solutions via the exploitation of optimal dose distributions found by human planners on previously treated patients.
+As this is ongoing research, we generated synthetic phantom patients and associated realistic clinical doses.
+Our deep learning agent successfully learned correct actions leading to treatment plans similar to past cases ones.
+The incapacity to reproduce human-like dose plans hinders adopting a fully automated treatment planning system; this method could start paving the way towards human-less treatment planning system technologies. % "tie conclusion of reasoning why we do this technique."
 In future work, we hope to be able to apply this technique to real cases.
 
-% 150-300 words
-
-% too much background
-% 1§
-% 6-8 sentences
-% more details on the method (2 sentences)
-% tie ccl to reason why
-% last sentence is ok
-
-% one sentence per § of bg
+% 150-300 words => 200
+% 6-8 sentences => 11 (but short)
 
