material & method intro §

--- a/my_content.tex
+++ b/my_content.tex
@@ -37,7 +37,9 @@ We allowed our-self to use the dose distributions of previously treated patients
 However, we consider that access to the exact actions taken by human dosimetrist on the TPS are unavailable (as this piece of data is not usually stored by clinics; only the final plan is stored).
 
 \section{Materials and Methods}
-We introduce a new paradigm in reinforcement learning (RL) based on evaluating states rather than the reward.
+% We introduce a new paradigm in reinforcement learning (RL) based on evaluating states rather than the reward.
+We introduce a new paradigm for reward based dosimetrist reinforcement learning agents.
+This new reward system aims at better mimicking human-optimized doses
 
 \subsection{Reinforcement Learning Reward}
 
