--- a/my_content.tex
+++ b/my_content.tex
@@ -35,7 +35,7 @@ We trained an agent that takes as an input the DVHs of the current optimized dos
 
 We allowed our-self to use the dose distributions of previously treated patients to train our model.
 However, we consider that access to the exact actions taken by human dosimetrist on the TPS are unavailable (as this piece of data is not usually stored by clinics; only the final plan is stored).
-
+This data availability suggests the use of RL.
 
 \section{Materials and Methods}
 % We introduce a new paradigm in RL based on evaluating states rather than the reward.
