metrics names & accronyms

--- a/my_content.tex
+++ b/my_content.tex
@@ -12,7 +12,7 @@ To achieve the best treatment, doctors must solve a complex inverse mathematical
 A lack of standardized prioritization of constraints makes the optimization a real challenge.
 The standard procedure nowadays is to guide computer optimization manually: dosimetrists manually update the settings of an optimizing software so-called Treatment Planning System (TPS) \cite{planification_website}.
 
-There have been many tries to create a metric that quantifies the quality of a treatment plan, such as Normal tissue complication probabilities (NTCP), Target coverage, Conformity index, and Heterogeneity index, among others/to name a few \cite{lyman_normal_1992} \cite{li_input_2022}.\label{metrics}
+There have been many tries to create a metric that quantifies the quality of a treatment plan, such as Normal Tissue Complication Probabilities (NTCP), target coverage, conformity index, and heterogeneity index, among others/to name a few \cite{lyman_normal_1992} \cite{li_input_2022}\label{metrics}.
 However, they have yet to satisfy all radio-oncologists, and the only reliable way to assess a doctor's plan is to assess out the dose-volume histograms (DVHs) themselves.
 
 As a result, Pareto surface exploration is unsuitable due to the lack of impartial quantitative measurement for a particular plan \cite{huang_pareto_2021}.
