added citation on dose distances

--- a/refs.bib
+++ b/refs.bib
@@ -307,3 +307,16 @@
 	file = {arXiv Fulltext PDF:C\:\\Users\\PaulDubois\\Zotero\\storage\\XAGDLVJT\\Dubois - 2023 - Radiotherapy Dosimetry A Review on Open-Source Op.pdf:application/pdf;arXiv.org Snapshot:C\:\\Users\\PaulDubois\\Zotero\\storage\\FD8AYZSM\\2305.html:text/html},
 }
 
+
+@inproceedings{paul_dubois_novel_2024,
+	address = {Glasgow (UK)},
+	title = {A {Novel} {Framework} for {Multi}-{Objective} {Optimization} and {Robust} {Plan} {Selection} {Using} {Graph} {Theory}},
+	abstract = {Optimizing dose distribution in radiation therapy planning for complex prescriptions is a multifaceted challenge with critical implications for patient treatment and toxicity management. This challenge arises from several key factors:
+	- Lack of Standardization
+	- Complex Mathematical Aspects
+	- Expert Bias
+	These challenges emphasize the need for a standardized, evidence-based approach. Incorporating advanced technologies, data-driven decision support, and interdisciplinary collaboration can help strike a balance between tumor control and minimizing toxicity, ensuring the best outcomes for each patient while reducing unnecessary risks [5].},
+	language = {English},
+	author = {{P. Dubois} and {N. Paragios} and {P.-H. Cournède} and {G. Temiz} and {R. Marini-Silva} and {N. Bus} and {P. Fenoglietto}},
+	year = {2024},
+}
