--- a/my_content.tex
+++ b/my_content.tex
@@ -63,7 +63,7 @@ We can hope to gain some computation time.
 However, this technique does not use past plans; it only needs the optimizer inputs (CT, structures contours).
 We propose using the availability of past treatment plans to better catch the complexity of decisions made by dosimetrists and better match their expectations of a fully automatic treatment planning system.
 
-As developed in previous work, we can derive a distance between dose plans [add citation].
+As developed in previous work, we can derive a distance between dose plans \cite{paul_dubois_novel_2024}.
 If we consider the clinical dose of past cases (used for training) as the best achievable one, we can evaluate a dose plan by computing its distance from the clinical dose plan.
 
 Let $D_t$ be the dose associated with $S_t$, and $D_C$ the clinical dose.
