--- a/ipmu2024_template.tex
+++ b/ipmu2024_template.tex
@@ -16,18 +16,18 @@
 	\title{Radiotherapy Dose Optimization via Clinical Knowledge Based Reinforcement Learning}
 	\titlerunning{Radiotherapy Optimization with Clinical Knowledge}
 	
-	\author{Paul Dubois\inst{1,2,3}\orcidID{0009-0003-3856-8048}
+	\author{Paul Dubois\inst{1,2}\orcidID{0009-0003-3856-8048}
 		\and \\
 		Paul-Henry Cournède \inst{1}\orcidID{0000-0001-7679-6197}
 		\and \\
 		Nikos Paragios\inst{2}\orcidID{0000-0002-9668-4763}
-%		\and\\
+%		\and \\
 %		Rafael Marini-Silva\inst{2}
-%		\and\\
+%		\and \\
 %		Norbert Bus\inst{2}
-%		\and\\
+%		\and \\
 %		Nikos Komodakis\inst{2}
-%		\and\\
+%		\and \\
 %		Pascal Fenoglietto\inst{3}
 	}
 	% \authorrunning{F. Author et al.}
@@ -42,11 +42,11 @@
 		\email{\{p.dubois,n.paragios\}@therapanacea.eu}\\
 %		\email{\{p.dubois,n.paragios,r.marini-silva,n.bus,n.komodakis\}@therapanacea.eu}\\
 		\url{https://www.therapanacea.eu/}
-		\and
-		Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France\\
-		\email{paul.dubois@icm.unicancer.fr}\\
+%		\and
+%		Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France\\
+%		\email{paul.dubois@icm.unicancer.fr}\\
 %		\email{\{paul.dubois,pascal.fenoglietto\}@therapanacea.eu}\\
-		\url{https://www.therapanacea.eu/}
+%		\url{https://www.therapanacea.eu/}
 	}
 	
 	\maketitle
