--- a/midl-shortpaper.tex
+++ b/midl-shortpaper.tex
@@ -50,10 +50,7 @@
 
 % More complicate cases, e.g. with dual affiliations and joint authorship
 \midlauthor{
-	\Name{Paul Dubois\nametag{$^{1,2,3}$}} \Email{p.dubois@centralesupelec.fr}\\
-	\addr $^{1}$ Biomathematics, MICS, CentraleSupélec, Université Paris-Saclay \\
-	\addr $^{2}$ TheraPanacea \\
-	\addr $^{3}$ Institut du Cancer de Montpellier
+	\Name{Paul Dubois\nametag{$^{1,2}$}} \Email{p.dubois@centralesupelec.fr}
 	\AND
 	\Name{Paul-Henry Cournède\nametag{$^{1}$}} \Email{paul-henry.cournede@centralesupelec.fr}
 	\AND
@@ -66,6 +63,10 @@
 %	\Name{Nikos Komodakis\nametag{$^{2}$}} \Email{n.komodakis@therapanacea.eu}
 %	\AND
 %	\Name{Pascal Fenoglietto\nametag{$^{3}$}} \Email{Pascal.Fenoglietto@icm.unicancer.fr}
+	\\
+	\addr $^{1}$ Biomathematics, MICS, CentraleSupélec, Université Paris-Saclay
+	\addr $^{2}$ TheraPanacea
+%	\addr $^{3}$ Institut du Cancer de Montpellier
 }
 
 \begin{document}
