--- a/iccr2024_template.tex
+++ b/iccr2024_template.tex
@@ -25,7 +25,7 @@
 \title{Radiotherapy Dose Optimization via Clinical Knowledge Based Reinforcement Learning}
 
 %%%%% add authors and affiliations here %%%%%
-\author[1,2,3]{Paul Dubois}
+\author[1,2]{Paul Dubois}
 \author[1]{Nikos Paragios}
 \author[2]{Paul-Henry Cournède}
 %\author[1]{Rafael Marini-Silva}
@@ -37,7 +37,7 @@
 
 \affil[2]{MICS, CentraleSupélec, Université Paris-Saclay, Paris, France}
 
-\affil[3]{Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France}
+%\affil[3]{Institut du Cancer de Montpellier (Val d'Aurelle), Montpellier, France}
 
 %%%%% don't change these 2 lines %%%%%
 \maketitle
