added dose prescription

--- a/my_content.tex
+++ b/my_content.tex
@@ -150,6 +150,7 @@ Likewise, we generate five organs gravitating around the PTV, aligned on the axi
 \subsection*{Clinical dose}
 After generating the patient's CT and structures, we needed to create a reference dose that our agent should mimic.
 We manually set weights and performed a standard optimization.
+The dose prescription is a standard 80Gy on PTV, and is the same across all patients.
 
 \begin{figure*}
 	\centering
