--- a/my_content.tex
+++ b/my_content.tex
@@ -155,13 +155,13 @@ The dose prescription is a standard 80Gy on PTV, and is the same across all pati
 \begin{figure*}
 	\centering
 	\includegraphics[width=0.7\textwidth]{main_slice-dose.pdf}
-	\caption{First generated patient: main axial slice (centre of the PTV) of the \textbf{clinical dose}; structures are contoured as before.}
+	\caption{Example of a generated patient: main axial slice (centre of the PTV) of the \textbf{clinical dose}; structures are contoured as before.}
 	\label{fig:main_slice-dose}
 \end{figure*}
 \begin{figure*}
 	\centering
 	\includegraphics[width=0.9\textwidth]{dvh_example.pdf}
-	\caption{First generated patient: clinical dose \textbf{DVH}.}
+	\caption{Example of a generated patient: clinical dose \textbf{DVH}.}
 	\label{fig:clinical_dvh}
 \end{figure*}
 
