--- a/my_content.tex
+++ b/my_content.tex
@@ -94,10 +94,12 @@ This reward can be interpreted as the "distance gained to the clinical dose".
 %Given the statement of the optimization problem, and the fact that we can not use a warm start, making short-term compromises does not make much sense.
 %It is, therefore, safe to predict the next state evaluation directly, without the use of the Bellman optimality equation.
 
-\subsection{Avoiding Over-fitting}
+
+\subsection{Architecture}
 We use a dense neural network, taking the DVHs and the current normalized weight values as inputs.
+It outputs the $Q(s,a)$ Value for each possible action $a$.
 Dense layers are very prone to overfitting.
-In order to force the network to actually predict the following evaluation for each possible action, without over-fitting, we incorporated a bottleneck in the network.
+In order to force the network to actually predict the following evaluation for each possible action, without over-fitting, we incorporated a bottleneck in the network [ref architecture figure].
 Compressing the information stops the network from learning "by heart".
 Networks with such architecture show significantly better results on validation.
 %This comforted the idea that our network was learning from data without unthinkingly over-fitting.
