adjusted fig sizes

--- a/my_content.tex
+++ b/my_content.tex
@@ -105,9 +105,9 @@ Networks with such architecture show significantly better results on validation.
 
 \begin{figure*}
 	\centering
-	\includegraphics[height=8cm]{architecture_all_actions.pdf}
-	\hspace{1.5cm}
-	\includegraphics[height=6cm]{losses-distance.pdf}
+	\includegraphics[width=5cm]{architecture_all_actions.pdf}
+	\hspace{0.5cm}
+	\includegraphics[width=7cm]{losses-distance.pdf}
 	\caption{Neural network architecture and Loss evolution while training.}
 	\label{fig:architecture}
 \end{figure*}
