--- a/my_content.tex
+++ b/my_content.tex
@@ -128,7 +128,21 @@ Our method was shown to outperform classical metric based RL, as well as brute f
 The network was able to converge on the training data, validation shown some minor over fitting.
 For testing, we generated 30 brand new cases that we again manually optimized.
 We then used the RL model to perform the optimization of those 30 unseen cases.
-On average, our model was able to reduce the dose distance with manual optimized dose by a factor of $8$ (from $1.94$ at iteration $1$ to $0.18$ at iteration $4$), as shown on the table.
+On average, our model was able to reduce the dose distance with manual optimized dose by a factor of $8$ (from $1.94$ at iteration $1$ to $0.18$ at iteration $4$), as shown on the table \ref{table:results}.
+
+\begin{center}
+	\begin{tabular}{| c || c | c | c |} 
+		\hline
+		Agent & Mean Final Distance & Homogeneity Score & Conformity Score\\ 
+		\hline
+		RL Distance Score & 6 & 87837 & 787 \\ 
+		RL Homogeneity Score & 7 & 78 & 5415 \\
+		RL Conformity Score & 545 & 778 & 7507 \\
+		Meta-optimization & 545 & 18744 & 7560 \\
+		\hline
+	\end{tabular}
+	\label{table:results}
+\end{center}
 
 
 \subsection{Qualitative Results}
