copy table data

--- a/my_content.tex
+++ b/my_content.tex
@@ -135,10 +135,10 @@ On average, our model was able to reduce the dose distance with manual optimized
 		\hline
 		Agent & Mean Final Distance & Homogeneity Score & Conformity Score\\ 
 		\hline
-		RL Distance Score & 6 & 87837 & 787 \\ 
-		RL Homogeneity Score & 7 & 78 & 5415 \\
-		RL Conformity Score & 545 & 778 & 7507 \\
-		Meta-optimization & 545 & 18744 & 7560 \\
+		RL Distance Score & \textbf{0.91} & 2.31 & 0.18 \\ 
+		RL Homogeneity Score & 2.31 & \textbf{5.17} & \textbf{0.5} \\
+		RL Conformity Score &  1.76  & 3.88 & 0.39 \\
+		Meta-optimization & 1.81 & 3.78 & 0.36 \\	
 		\hline
 	\end{tabular}
 	\label{table:results}
