--- a/my_content.tex
+++ b/my_content.tex
@@ -173,6 +173,16 @@ Several avenues exist for further research.
 Firstly, we plan to investigate strategies for incorporating additional information into the training process, such as patient characteristics and anatomical complexities.
 Secondly, we aim to explore techniques for improving the interpretability of the agent's decision-making process, allowing for better understanding and potential clinical validation.
 
+% \section{Conclusion}
+% Our approach differs from previous RL-based methods for radiotherapy planning in two key aspects.
+% We avoid relying on pre-defined metrics for evaluation, which can be subjective and limit the agent's ability to learn complex optimization strategies.
+% We also directly predict the next state evaluation, eliminating the need for reward shaping and potentially improving learning efficiency.
+% Compared to traditional meta-optimization approaches, our method leverages past treatment data, potentially leading to more informed decision-making during the optimization process.
+
+% This study demonstrates the feasibility and potential benefits of deep RL for automating radiotherapy treatment plan optimization.
+% Our approach, which leverages past treatment data and directly predicts state evaluations, shows promise in achieving significant improvements in efficiency and potentially, treatment outcomes.
+% Further research is needed to address limitations, improve interpretability, and ensure safe clinical integration.
+% We believe this approach has the potential to revolutionize radiotherapy planning, leading to more standardized, efficient, and potentially, improved patient care.
 
 \section*{Appendix}
 As this is very new and ongoing research, we generated synthetic phantom patients and associated trustable clinical doses.
